hide telephone number

--- a/Karakin-PCB-layout-and-embedded-en.tex
+++ b/Karakin-PCB-layout-and-embedded-en.tex
@@ -32,7 +32,7 @@
 %%%%%%%%%%%%%%%%
 \name{Artsiom}{Karakin}
 \title{PCB Layout Engineer \&\\ Embedded Programmer}
-\phone[mobile]{+375292560234}
+%\phone[mobile]{+375292560234}
 \email{karakin2000@gmail.com}
 \social[github]{artsi0m}
 %\social[matrix]{artsi0m:matrix.org}
