--- a/Karakin-PCB-layout-and-embedded-en.tex
+++ b/Karakin-PCB-layout-and-embedded-en.tex
@@ -44,30 +44,40 @@
 
 \maketitle
 
-
-
 \section{Work Experience}
-\cventry{2024-06-07--2024-07-10}{PCB Layout Engineer}{\textrm{ООО РТЕ Сервис} rte.by}
-    {Minsk}{}{Completed an apprenticeship}
+% \cventry{2024-06-07--2024-07-10}{PCB Layout Engineer}
+\cventry{2024}{PCB Layout Engineer}
+{ООО «РТЕ Сервис» rte.by}{Minsk}{}{
+  I have completed an apprenticeship and created a project of RS232 to
+  RS485 converter for the department of service with which I was
+  working. I learned that the department of production may sometimes be
+  situated in the same country but in another city, which can result in
+  a long lag for correction of design. Therefore, I should always verify
+  my project in the simulator.}
 
 \section{Education}
-\cventry{2025}{Radioelectronics Engineer}
-{Belarussian State University of Informatics and Radioelectronics bsuir.by}{Minsk}
-{Bachelor}{In my senior year. I'll graduate by 2025.}
-   
+\cventry{2025}{Radio-electronics Engineer}
+{Belarusian State University of Informatics and Radio-electronics bsuir.by}
+{Minsk}{Bachelor}{ In my final year. I'll graduate in 2025.\\
+  I got a 10/10 in the microcontroller course.
+  I also prepared reports on CAD programs for the
+  for the university science conference.\\
+  I have learnt how to use EDA CAD programs such as KiCAD or CAE programs such as COMSOL
+  Multiphysics.\\
+  The subject of my bachelor thesis will be the servo drive test system.}
+
 \section{Key skills \& Completed Projects}
 \subsection{PCB design with KiCAD}
 
 \cvitem{RS232 to RS485 Converter}{
-  Two layred PCB design with structured element list
-  done on apprenteceship. Learned that I should always
-  verify my project in simulator.
+  Two layered PCB design with structured element list
+  done on apprenticeship.
   \url{https://github.com/artsi0m/6sem_practise}}
-   
-\cvitem{Hackerspace Tube PCB}{
-  \textbf{Single} layer PCB design
-  with fabrication files saved in git repo.
-  Self-education project done in Minsk Hackerspace.
+
+\cvitem{Hacker-space Tube PCB}{
+  Single layer PCB design
+  with fabrication files saved in git repository.
+  Self-education project done in Minsk Hacker-space.
   \url{https://github.com/artsi0m/HS_tube_KiCAD}
 }
 
@@ -77,16 +87,20 @@
   BCD to 7 segment decoder written in Atmel AVR-assembly
   for Pinboard 2 devboard.
   Learned how to write in assembly with Atmel studio and flash
-  programm to microcontroller using avrdude.
+  program to micro-controller using avrdude.
   \url{https://github.com/artsi0m/lab1_segment_display}
 }
 
 \subsection{C Programming}
 
 \cvitem{argcalc}{
-  Reimplementation of an expr(1) utility from UNIX .
-  Simple command line calculator using Dejkstra's Shunting Yard algorithm.
+  Re-implementation of an expr(1) utility from UNIX.
+  Simple command line calculator using Dijkstra's Shunting Yard algorithm.
   \url{https://github.com/artsi0m/argcalc}
 }
+
+% current date
+\vfill
+Last edited: \today
 
 \end{document}
