--- a/Karakin-PCB-layout-and-embedded-en.tex
+++ b/Karakin-PCB-layout-and-embedded-en.tex
@@ -44,16 +44,7 @@
 
 \maketitle
 
-\section{Work Experience}
-% \cventry{2024-06-07--2024-07-10}{PCB Layout Engineer}
-\cventry{2024}{PCB Layout Engineer}
-{ООО «РТЕ Сервис» rte.by}{Minsk}{}{
-  I have completed an apprenticeship and created a project of RS232 to
-  RS485 converter for the department of service with which I was
-  working. I learned that the department of production may sometimes be
-  situated in the same country but in another city, which can result in
-  a long lag for correction of design. Therefore, I should always verify
-  my project in the simulator.}
+\input{work-experience}
 
 \section{Education}
 \cventry{2025}{Radio-electronics Engineer}
@@ -61,7 +52,7 @@
 {Minsk}{Bachelor}{ In my final year. I'll graduate in 2025.\\
   I got a 10/10 in the microcontroller course.
   I also prepared reports on CAD programs for the
-  for the university science conference.\\
+  for the university science conference.
   I have learnt how to use EDA CAD programs such as KiCAD or CAE programs such as COMSOL
   Multiphysics.\\
   The subject of my bachelor thesis will be the servo drive test system.}
