education in the separate file, skills from PlaysDev internship

--- a/Karakin-devops-en.tex
+++ b/Karakin-devops-en.tex
@@ -47,24 +47,31 @@
 
 \input{work-experience}
 
-\section{Education}
-\cventry{2025}{Radioelectronics Engineer}
-{Belarussian State University of Informatics and Radioelectronics bsuir.by}
-{Minsk}{Bachelor}{In my senior year. I'll graduate by 2025.}
+\input{education}
 
 
 \section{Key skills}
 \begin{multicols}{4}
   \begin{itemize}
-  \item shell scripting
-  \item SQL
+    
   \item Ansible
-  \item Python
-  \item awk
-  \item coreutils
+  \item Bash
+  \item GitLab CI/CD
+  \item Grafana
   \item Linux
+  \item NGINX
+  \item Prometheus
+  \item Python
+  \item Terraform
   \item docker
   \item docker compose
+    
+  \item AWS EC2
+  \item AWS ECS
+  \item AWS ELB
+  \item AWS IAM
+  \item AWS RDS
+  \item AWS VPC    
 \end{itemize}
 \end{multicols}
 
